--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 -->
 <html xmlns="http://www.w3.org/1999/html">
 	<head>
-		<title>IDE</title>
+		<title>RiverMamba</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -423,7 +423,7 @@
 						<ul class="links">
 
 							<li>&copy; All rights reserved</li>
-							<li>Design: <a href="https://hakamshams.github.io/IDE/">IDE</a> & <a  href="http://html5up.net">HTML5 UP</a> &
+							<li>Design: <a href="https://hakamshams.github.io/IDE/">IDE</a> & <a  href="https://hakamshams.github.io/Focal-TSMP/">Focal-TSMP</a> & <a  href="http://html5up.net">HTML5 UP</a> &
 								<a href="https://nerfies.github.io">Nerfie</a>
 							</li>
 						<!--	<li>Contact: <a style="color: white" href="mailto:shams@iai.uni-bonn.de">shams@iai.uni-bonn.de</a> or
