--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 								  border-bottom: 0 !important;
 								  padding: 0em 0em 0em 0em">
 				<div class="container" >
-<script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.38/build/spline-viewer.js"></script>
-<spline-viewer hint loading-anim-type="spinner-big-dark" url="https://prod.spline.design/nolnVLNRiyjh1iQY/scene.splinecode"></spline-viewer>
+					<script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.71/build/spline-viewer.js"></script>
+					<spline-viewer hint loading-anim-type="spinner-small-dark" url="https://prod.spline.design/nolnVLNRiyjh1iQY/scene.splinecode"></spline-viewer>
 				</div>
 			</section>
 
