--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 								<ul>
 									<li><a class="icon1 ai ai-open-access" href="https://arxiv.org/abs/2505.22535"><span>Paper</span></a></li>
 									<li><a class="icon1 ai ai-arxiv" href="https://arxiv.org/abs/2505.22535"><span>ArXiv</span></a></li>
-									<li><a class="icon brands alt fa-youtube" href=""><span>Video [in preparation]</span></a></li>
-									<li><a class="icon brands alt fa-github" href="https://github.com/HakamShams/RiverMamba_code"><span>Code</span></a></li>
-									<li><a class="icon1 ai ai-open-data" href="https://doi.org/10.60507/FK2/T8QYWE"><span>Dataset [in preparation]</span></a></li>
+									<li><a class="icon brands alt fa-youtube" href=""><span style="font-family: 'Academicons'">Video [in preparation]</span></a></li>
+									<li><a class="icon brands alt fa-github" href="https://github.com/HakamShams/RiverMamba_code"><span style="font-family: 'Academicons'">Code</span></a></li>
+									<li><a class="icon solid fa-database" href="https://doi.org/10.60507/FK2/T8QYWE"><span style="font-family: 'Academicons'">Dataset [in preparation]</span></a></li>
 								</ul>
 							</nav>
 
