--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 									<li><a class="icon1 ai ai-arxiv" href="https://arxiv.org/abs/2505.22535"><span>ArXiv</span></a></li>
 									<li><a class="icon brands alt fa-youtube" href=""><span style="font-family: 'Academicons'">Video [in preparation]</span></a></li>
 									<li><a class="icon brands alt fa-github" href="https://github.com/HakamShams/RiverMamba_code"><span style="font-family: 'Academicons'">Code</span></a></li>
-									<li><a class="icon solid fa-database" href="https://doi.org/10.60507/FK2/T8QYWE"><span style="font-family: 'Academicons'">Dataset [in preparation]</span></a></li>
+									<li><a class="icon solid fa-database" href="https://doi.org/10.60507/FK2/T8QYWE"><span style="font-family: 'Academicons'">Dataset</span></a></li>
 								</ul>
 							</nav>
 
@@ -381,7 +381,7 @@
 
 			<section style="background: #ffffff; padding: 2em 0 3em 0">
 					<div class="container">
-						<header><h2 style="color:#000000; text-align: left">Dataset, reforecasts and pretrained models [will be added here soon...] </h2></header>
+						<header><h2 style="color:#000000; text-align: left">Dataset, reforecasts and pretrained models</h2></header>
 
 					<!--<header><h2 style="color:#000000; text-align: left">BibTeX Dataset: </h2></header> -->
 					<div class="row aln-center" >
