--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 						<!-- Logo -->
 
-							<h1 id="logo", style="color:#ffd3f9"><img src="assets/images/neurips-navbar-logo.svg" width="80" height="80"/><img src="assets/images/mamba_logo.png" width="80" height="80"/><a href="https://arxiv.org/abs/2505.22535"> &nbsp;RiverMamba: A State Space Model for Global River Discharge <br> and Flood Forecasting</a></h1>
+							<h1 id="logo", style="color:#ffd3f9"><img src="assets/images/neurips-navbar-logo.svg" width="80" height="80"/><img src="assets/images/mamba_logo.png" width="80" height="80"/><a href="https://arxiv.org/abs/2505.22535"> &nbsp;RiverMamba: A State Space Model for Global River Discharge and Flood Forecasting</a></h1>
 							<p style="color:white">
 								<strong><a href="https://hakamshams.github.io/">Mohamad Hakam Shams Eddin</st></a><sup><img src="assets/images/icon_1.svg" width="20" height="20"/>,<img src="assets/images/icon_2.svg" width="20" height="20"/></sup>,
 								<a href="https://github.com/yikuizh">Yikui Zhang</a><sup><img src="assets/images/icon_3.svg" width="20" height="20"/>,<img src="assets/images/icon_4.svg" width="20" height="20"/></sup>,
