--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								  padding: 0em 0em 0em 0em">
 				<div class="container" >
 					<script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.85/build/spline-viewer.js"></script>
-					<spline-viewer hint loading-anim-type="spinner-small-dark" url="https://prod.spline.design/nolnVLNRiyjh1iQY/scene.splinecode"></spline-viewer>
+					<spline-viewer hint loading-anim-type="spinner-small-light" url="https://prod.spline.design/nolnVLNRiyjh1iQY/scene.splinecode"></spline-viewer>
 				</div>
 			</section>
 
