--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 						<!-- Logo -->
 
-							<h1 id="logo", style="color:#ffd3f9"><img src="assets/images/neurips-navbar-logo.svg" width="80" height="80"/><img src="assets/images/mamba_logo.png" width="80" height="80"/><a href="https://arxiv.org/abs/2505.22535"> &nbsp;RiverMamba: A State Space Model for Global River Discharge and Flood Forecasting</a></h1>
+							<h1 id="logo", style="color:#ffd3f9"><img src="assets/images/neurips-navbar-logo.svg" width="80" height="80"/><img src="assets/images/mamba_logo.png" width="80" height="80"/><a href="https://neurips.cc/virtual/2025/poster/118456"> &nbsp;RiverMamba: A State Space Model for Global River Discharge and Flood Forecasting</a></h1>
 							<p style="color:white">
 								<strong><a href="https://hakamshams.github.io/">Mohamad Hakam Shams Eddin</st></a><sup><img src="assets/images/icon_1.svg" width="20" height="20"/>,<img src="assets/images/icon_2.svg" width="20" height="20"/></sup>,
 								<a href="https://github.com/yikuizh">Yikui Zhang</a><sup><img src="assets/images/icon_3.svg" width="20" height="20"/>,<img src="assets/images/icon_4.svg" width="20" height="20"/></sup>,
@@ -63,7 +63,7 @@
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="icon1 ai ai-open-access" href="https://arxiv.org/abs/2505.22535"><span>Paper</span></a></li>
+									<li><a class="icon1 ai ai-open-access" href="https://openreview.net/forum?id=MZwGG87Jev&referrer=%5Bthe%20profile%20of%20Mohamad%20Hakam%20Shams%20Eddin%5D(%2Fprofile%3Fid%3D~Mohamad_Hakam_Shams_Eddin1)"><span>Paper</span></a></li>
 									<li><a class="icon1 ai ai-arxiv" href="https://arxiv.org/abs/2505.22535"><span>ArXiv</span></a></li>
 									<li><a class="icon brands alt fa-youtube" href=""><span style="font-family: 'Academicons'">Video [in preparation]</span></a></li>
 									<li><a class="icon brands alt fa-github" href="https://github.com/HakamShams/RiverMamba_code"><span style="font-family: 'Academicons'">Code</span></a></li>
