--- a/index.html
+++ b/index.html
@@ -382,7 +382,6 @@
 			<section style="background: #ffffff; padding: 2em 0 3em 0">
 					<div class="container">
 						<header><h2 style="color:#000000; text-align: left">Dataset, reforecasts and pretrained models</h2></header>
-
 					<!--<header><h2 style="color:#000000; text-align: left">BibTeX Dataset: </h2></header> -->
 					<div class="row aln-center" >
 						<!--<script src="https://bonndata.uni-bonn.de/resources/js/widgets.js?persistentId=doi:10.60507/FK2/RD9E33&amp;dvUrl=https://bonndata.uni-bonn.de&amp;widget=citation&amp;heightPx=260"></script> -->
@@ -392,6 +391,17 @@
 			</section>
 
 
+			<section style="background: #ffffff; padding: 2em 0 3em 0">
+					<div class="container">
+						<header><h2 style="color:#000000; text-align: left">Reforecasts on Hugging Face 🤗</h2></header>
+						<iframe
+							  src="https://huggingface.co/datasets/HakamShams/RiverMamba_reforecasts/embed/viewer/default/train"
+							  frameborder="0"
+							  width="100%"
+							  height="560px"
+						></iframe>
+					</div>
+			</section>
 
 			<!-- Footer -->
 				<section id="footer">
