add curves in 3d

--- a/index.html
+++ b/index.html
@@ -217,10 +217,23 @@
 									<section>
 										<a href="assets/images/curves.jpg" class="image featured"><img src="assets/images/curves.jpg" alt="Comparison to the baselines 2" /></a>
 									</section>
-							</div>
+                            </div>
+
+                            	<div class="row aln-center" >
+							<!-- Content -->
+								<div class="col-9">
+									<!-- Post -->
+										<article class="box post">
+											<p> <strong><span style="color:#5e0054"> Space-filling Curves in 3D</span></strong>: an illustration with 3 timesteps.
+											</p>
+										<a href="assets/gifs/curve_3d.gif" class="image featured"><img src="assets/gifs/curve_3d.gif" alt="Curves in 3D" /></a>
+										</article>
+								</div>
+						</div>
+
+
 						</div>
 					</div>
-
 
 
 <!-- Baselines -->
@@ -229,7 +242,7 @@
 					<div class="container">
 						<div class="row aln-center">
 							<!-- Content -->
-								<div class="col-9">
+								<div class="col-10">
 									<!-- Post -->
 										<article class="box post">
 											<header>
@@ -304,7 +317,7 @@
 
 						<div class="row aln-center" >
 							<!-- Content -->
-								<div class="col-11">
+								<div class="col-10">
 									<!-- Post -->
 										<article class="box post">
 											<p> Here we compare on 3366 <strong><span style="color:#5e0054"> gauged </span></strong> stations (2021-2023) using GRDC observational data.
